Fix gaps in rows on medium size devices

--- a/styles/pages/_categories.scss
+++ b/styles/pages/_categories.scss
@@ -4,8 +4,13 @@
     margin-bottom: $footer-top-margin;
     color: $body-color;
 
+    .container {
+      @include display(flex);
+      @include flex-wrap(wrap);
+    }
+
     .two-column-post {
-      @include span (6);
+      @include flex-basis(50%);
       height: auto;
       margin-bottom: 60px;
       position: relative;
